# KitchenOS

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  run.sh
backend/: main.cpp  tests.cpp
backend/include/: RecipeManager.hpp
frontend/: index.html
